--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,35 @@
-
+/* COMMONS */
+img{
+    width: 100%;
+}
+/* END COMMONS */
 /* HEADER  */
 header{
     background-color: #2c3e51;
 }
+.menu a{
+    text-decoration: none;
+    color: white;
+}
+.menu li{
+    list-style-type: none;
+    display: inline-block;
+}
 /* HEADER MEDIA-QUERY */
 @media screen and (min-width: 768px){  
-    .menu{
-        list-style-type: none;
-        text-decoration: none;
-    }
+    
 }
 /* END HEADER */
 
 /* MAIN */
-.user{
+.user, .about{
     background-color: #1abc9c;
 }
 .user-img{
     width: 300px;
+}
+.portfolio img{
+    border-radius: 20px;
 }
 /* MAIN MEDIA-QUERY */
 /* END MAIN */
