--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
 img{
     width: 100%;
 }
+.social{
+    width: 40px;
+    height: 40px ;
+    border: 1px solid white;
+    border-radius: 50%;
+}
 /* END COMMONS */
 /* HEADER  */
 header{
@@ -11,7 +17,7 @@ header{
     text-decoration: none;
     color: white;
 }
-.menu li{
+li{
     list-style-type: none;
     display: inline-block;
 }
@@ -33,3 +39,14 @@ header{
 }
 /* MAIN MEDIA-QUERY */
 /* END MAIN */
+
+/* FOOTER */
+.references{
+    background-color: #3a546c;
+}
+.copyright{
+    background-color: #2c3e51;
+}
+/* FOOTER MEDIA-QUERY */
+
+/* END FOOTER */
