--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* COMMONS */
+
 img{
     width: 100%;
 }
@@ -8,35 +9,91 @@ img{
     border: 1px solid white;
     border-radius: 50%;
 }
+header ul,
+footer ul{
+    padding:0;
+    margin:0;
+
+}
 /* END COMMONS */
 /* HEADER  */
 header{
     background-color: #2c3e51;
+    color: white;
 }
 .menu a{
     text-decoration: none;
-    color: white;
+    color: inherit;
 }
 li{
     list-style-type: none;
     display: inline-block;
+    padding-right: 10px;
 }
 /* HEADER MEDIA-QUERY */
-@media screen and (min-width: 768px){  
-    
-}
 /* END HEADER */
 
 /* MAIN */
+main section{
+    padding: 50px 0;
+}
 .user, .about{
     background-color: #1abc9c;
 }
+/* user */
 .user-img{
     width: 300px;
+}
+.user{
+    color: white;
+}
+/* star */
+.star{
+    width: 100%;
+    max-width: 800px;
+    margin: auto;
+}
+.fa-star{
+    font-size: 30px;
+}
+.hr_star{
+    width: 15%;
+    height: 4px;
+    border-radius: 40px;
+}
+/* color background-color white */
+.c_bc_w{
+    color: white;
+    background-color: white;
+}
+/* color background-color black */
+.c_bc_b{
+    color: #2c3e51;
+    background-color: #2c3e51;
+}
+/* end user */
+/* portfolio */
+.portfolio{
+    max-width: 1500px;
 }
 .portfolio img{
     border-radius: 20px;
 }
+/* end portfolio */
+
+/* about */
+.btn{
+    border: 1px solid white;
+    color: white;
+}
+.about{
+    color: white;
+}
+.container-about{
+    width: 60%;
+}
+/* end about */
+
 /* MAIN MEDIA-QUERY */
 /* END MAIN */
 
