--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /* COMMONS */
-
+body{
+    min-width: 575px;
+}
+@media screen and (max-width 575px){
+    
+}
 img{
     width: 100%;
 }
@@ -100,10 +105,21 @@ main section{
     border-bottom: 1px solid lightgrey;
     border-radius: 0px;
 }
-.mb-3{
-    margin: 0rem;
+.contact .mb-3{
+    margin-bottom: 1rem;
 }
-
+.btn-green{
+    background-color: #1abc9c;
+}
+input[type]:focus {
+    box-shadow: none;
+}
+textarea:focus {
+    box-shadow: none;
+}
+.text_area{
+    padding-bottom: 50px;
+}
 /* end contact me */
 
 /* MAIN MEDIA-QUERY */
@@ -112,6 +128,13 @@ main section{
 /* FOOTER */
 .references{
     background-color: #3a546c;
+    padding: 50px 0;
+}
+footer{
+    color:white;
+}
+.social i{
+    line-height: 40px;
 }
 .copyright{
     background-color: #2c3e51;
